--- a/pod-defination.yml
+++ b/pod-defination.yml
@@ -4,16 +4,16 @@ apiVersion: v1
 kind: Pod
 
 metadata:
-  name: myapp-pod
+  name: redis
   namespace: default
   labels:
-    app: myapp
-    type: front-end
+    app: nginx
+    tier: db
 
 spec:
   containers:
-    - name: nginx-container
-      image: nginx
+    - name: nginx-alpine-container
+      image: nredis:alpine
 
 
 apiVersion: v1
