--- a/pod-defination.yml
+++ b/pod-defination.yml
@@ -24,7 +24,21 @@ spec:
           memory: "2Gi"
           cpu: 2
   #SchedulerName: XYZ
+      envFrom:               #for ENV config map
+        - configMapRef:
+            name: app-config
 
+      env:                  # For Single ENV
+        - name: APP_COLOR
+          valueFrom:
+            configMapKeyRef:
+              key: APP_COLOR
+      
+      volumes:
+        - name:  app-config-volume
+          configMap:
+            name:  app-config
+        mountPath:  Path to mount
   
   nodeName: node01
 
