--- a/pod-defination.yml
+++ b/pod-defination.yml
@@ -37,7 +37,7 @@ spec:
       volumes:
         - name:  app-config-volume
           configMap:
-            name:  app-config
+            name: app-config
         mountPath:  Path to mount
   
   nodeName: node01
@@ -65,6 +65,17 @@ spec:
   containers:
     - name: redis-container
       image: redis
+
+    - name:  sidecar
+      image: kcloud/filebeat-configured
+      volumeMounts:
+      - mountPath: /var/log/event-simulator
+        name: log-volume
+    volumes:
+      - name:  log-volume
+        hostPath:
+          path: /var/log/webapp
+          type: DirectoryOrCreate
 
   affinity:
     nodeAffinity:
